--- a/aip-discopt.bib
+++ b/aip-discopt.bib
@@ -28,7 +28,7 @@
 @inproceedings{maehara2019group,
   author = {Takanori Maehara and Yuma Inoue},
   title = {Group Decision Diagram ({GDD}): A Compact Representation for Permutations}, 
-  booktitle = {in Proceedings of the 33rd AAAI Conference on Artificial Intelligence (AAAI'19), Honolulu, Hawaii, United States, January 27--February 01, 2019.}
+  booktitle = {in Proceedings of the 33rd AAAI Conference on Artificial Intelligence (AAAI'19), Honolulu, Hawaii, United States, January 27--February 1, 2019},
   year = {2019},
 }
 @article{takaguchi2018existence,
@@ -161,7 +161,7 @@
 @inproceedings{maehara2018stochastic,
  author = {Takanori Maehara, Yutaro Yamaguchi},
  title = {Stochastic Packing Integer Programs with Few Queries},
- booktitle = {Proceedings of the Twenty-Ninth Annual {ACM-SIAM} Symposium on Discrete Algorithms (SODA'18), New Orleans, LA, USA, January 7-10, 2018},
+ booktitle = {Proceedings of the 29th Annual {ACM-SIAM} Symposium on Discrete Algorithms (SODA'18), New Orleans, LA, USA, January 7-10, 2018},
  pages = {293--310},
  year = {2018},
  url = {https://doi.org/10.1137/1.9781611975031.21},
