--- a/aip-discopt.bib
+++ b/aip-discopt.bib
@@ -1,3 +1,12 @@
+ @article{viard2019augmenting,
+  title={Augmenting content-based rating prediction with link stream features},
+  author={Viard, Tiphaine and Fournier-S’niehotta, Rapha{\"e}l},
+  journal={Computer Networks},
+  volume={150},
+  pages={127--133},
+  year={2019},
+  url={https://doi.org/10.1016/j.comnet.2018.12.002},
+}
 @inproceedings{kumabe2019linear,
  author = {Soh Kumabe and Takanori Maehara and Ryoma Sin'ya},
  title = {Linear Pseudo-Polynomial Factor Algorithm for Automaton Constrained Tree Knapsack Problem},
@@ -28,7 +37,7 @@
 @inproceedings{maehara2019group,
   author = {Takanori Maehara and Yuma Inoue},
   title = {Group Decision Diagram ({GDD}): A Compact Representation for Permutations}, 
-  booktitle = {in Proceedings of the 33rd AAAI Conference on Artificial Intelligence (AAAI'19), Honolulu, Hawaii, United States, January 27--February 1, 2019},
+  booktitle = {in Proceedings of the 33rd AAAI Conference on Artificial Intelligence (AAAI'19), Honolulu, Hawaii, United States, January 27--February 01, 2019.}
   year = {2019},
 }
 @article{takaguchi2018existence,
@@ -87,6 +96,14 @@
  pages = {5508--5516},
  year = {2018},
  url = {http://proceedings.mlr.press/v80/yabe18a.html},
+}
+@inproceedings{hatano2018computational,
+  author    = {Daisuke Hatano and Yuichi Yoshida},
+  title     = {Computational Aspects of the Preference Cores of Supermodular Two-Scenario Cooperative Games},
+  booktitle = {Proceedings of the 27th International Joint Conference on Artificial Intelligence (IJCAI'18), Stockholm, Sweden, July 13-19, 2018},
+  pages     = {310--316},
+  year      = {2018},
+  url       = {https://doi.org/10.24963/ijcai.2018/43},
 }
 @inproceedings{maehara2018optimal,
  author = {Takanori Maehara and Atsuhiro Narita and Jun Baba and Takayuki Kawabata},
@@ -161,7 +178,7 @@
 @inproceedings{maehara2018stochastic,
  author = {Takanori Maehara, Yutaro Yamaguchi},
  title = {Stochastic Packing Integer Programs with Few Queries},
- booktitle = {Proceedings of the 29th Annual {ACM-SIAM} Symposium on Discrete Algorithms (SODA'18), New Orleans, LA, USA, January 7-10, 2018},
+ booktitle = {Proceedings of the Twenty-Ninth Annual {ACM-SIAM} Symposium on Discrete Algorithms (SODA'18), New Orleans, LA, USA, January 7-10, 2018},
  pages = {293--310},
  year = {2018},
  url = {https://doi.org/10.1137/1.9781611975031.21},
