--- a/aip-discopt.bib
+++ b/aip-discopt.bib
@@ -1,4 +1,16 @@
- @article{viard2019augmenting,
+@article{taniai2018continuous,
+  title={Continuous 3D label stereo matching using local expansion moves},
+  author={Taniai, Tatsunori and Matsushita, Yasuyuki and Sato, Yoichi and Naemura, Takeshi},
+  journal={IEEE transactions on Pattern Analysis and Machine Intelligence},
+  volume={40},
+  number={11},
+  pages={2725--2739},
+  year={2018},
+  month={November 1},
+  publisher={IEEE},
+  url = {https://doi.org/10.1109/TPAMI.2017.2766072},
+}
+@article{viard2019augmenting,
   title={Augmenting content-based rating prediction with link stream features},
   author={Viard, Tiphaine and Fournier-S’niehotta, Rapha{\"e}l},
   journal={Computer Networks},
