--- a/aip-discopt.bib
+++ b/aip-discopt.bib
@@ -48,8 +48,8 @@
 }
 @inproceedings{maehara2019group,
   author = {Takanori Maehara and Yuma Inoue},
-  title = {Group Decision Diagram ({GDD}): A Compact Representation for Permutations}, 
-  booktitle = {in Proceedings of the 33rd AAAI Conference on Artificial Intelligence (AAAI'19), Honolulu, Hawaii, United States, January 27--February 1, 2019},
+  title = {Group Decision Diagram (GDD): A Compact Representation for Permutations}, 
+  booktitle = {Proceedings of the 33rd AAAI Conference on Artificial Intelligence (AAAI'19), Honolulu, Hawaii, United States, January 27 - February 1, 2019},
   year = {2019},
 }
 @article{takaguchi2018existence,
