--- a/maehara.bib
+++ b/maehara.bib
@@ -120,7 +120,7 @@
  url = {https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/view/16081},
 }
 @inproceedings{maehara2018stochastic,
- author = {Takanori Maehara, Yutaro Yamaguchi},
+ author = {Takanori Maehara and Yutaro Yamaguchi},
  title = {Stochastic Packing Integer Programs with Few Queries},
  booktitle = {Proceedings of the 29th Annual {ACM-SIAM} Symposium on Discrete Algorithms (SODA'18), New Orleans, LA, USA, January 7-10, 2018},
  pages = {293--310},
