--- a/aip-discopt.bib
+++ b/aip-discopt.bib
@@ -17,6 +17,7 @@
   volume={150},
   pages={127--133},
   year={2019},
+  month={November},
   url={https://doi.org/10.1016/j.comnet.2018.12.002},
 }
 @inproceedings{kumabe2019linear,
