--- a/aip-discopt.bib
+++ b/aip-discopt.bib
@@ -75,6 +75,14 @@
   publisher={IEEE},
   url = {https://doi.org/10.1109/TPAMI.2017.2766072},
 }
+@inproceedings{courtino2018limits,
+ author = {Mario Coutino and Elvin Isufi and Takanori Maehara and Geert Leus},
+ title = {On The Limits of Finite-Time Distributed Consensus Through Successive Local Linear Operations},
+ booktitle = {Proceedings of the 52nd Asilomar Conference on Signals, Systems, and Computers (ACSSC'18), Pacific Grove, CA, USA, October 28-31, 2018},
+ pages = {993--997},
+ year = {2018},
+ url = {https://doi.org/10.1109/ACSSC.2018.8645186},
+}
 @inproceedings{ohsaka2018boosting,
  author = {Naoto Ohsaka and Tomohiro Sonobe and Naonori Kakimura and Takuro Fukunaga and Sumio Fujita and Ken{-}ichi Kawarabayashi},
  title = {Boosting PageRank Scores by Optimizing Internal Link Structure},
