--- a/maehara.bib
+++ b/maehara.bib
@@ -1,3 +1,11 @@
+@inproceedings{ben2019submodular,
+ author = {Ben Chugg and Takanori Maehara},
+ title = {Submodular Stochastic Probing with Prices},
+ booktitle = {Proceedings of the 6th International Conference on Control, Decision and Information Technologies (CoDIT'19), Paris, France, April 23-25, 2019},
+ year = {2019},
+ url = {http://arxiv.org/abs/1810.01730},
+ eprint = {1810.01730},
+}
 @inproceedings{kumabe2019linear,
  author = {Soh Kumabe and Takanori Maehara and Ryoma Sin'ya},
  title = {Linear Pseudo-Polynomial Factor Algorithm for Automaton Constrained Tree Knapsack Problem},
@@ -94,7 +102,7 @@
 @inproceedings{imaizumi2018statistically,
  author = {Masaaki Imaizumi and Takanori Maehara and Yuichi Yoshida},
  title = {Statistically Efficient Estimation for Non-Smooth Probability Densities},
- booktitle = {International Conference on Artificial Intelligence and Statistics (AISTATS'18), Playa Blanca, Lanzarote, Canary Islands, Spain, 9-11 April 2018},
+ booktitle = {International Conference on Artificial Intelligence and Statistics (AISTATS'18), Playa Blanca, Lanzarote, Canary Islands, Spain, April 9 - 11, 2018},
  pages = {978--987},
  year = {2018},
  url = {http://proceedings.mlr.press/v84/imaizumi18a.html},
@@ -141,15 +149,6 @@
  volume = {abs/1807.04575},
  year = {2018},
  url = {http://arxiv.org/abs/1807.04575},
-}
-@misc{ben2019submodular,
- author = {Ben Chugg and Takanori Maehara},
- title = {Submodular Stochastic Probing with Prices},
- journal = {CoRR},
- volume = {abs/1810.01730},
- year = {2018},
- url = {http://arxiv.org/abs/1810.01730},
- eprint = {1810.01730},
 }
 @misc{komiyama2018simple,
  author = {Junpei Komiyama and Takanori Maehara},
