--- a/aip-discopt.bib
+++ b/aip-discopt.bib
@@ -1,3 +1,11 @@
+@inproceedings{ben2019submodular,
+ author = {Ben Chugg and Takanori Maehara},
+ title = {Submodular Stochastic Probing with Prices},
+ booktitle = {Proceedings of the 6th International Conference on Control, Decision and Information Technologies (CoDIT'19), Paris, France, April 23-25, 2019},
+ year = {2019},
+ url = {http://arxiv.org/abs/1810.01730},
+ eprint = {1810.01730},
+}
 @article{viard2019augmenting,
   title={Augmenting content-based rating prediction with link stream features},
   author={Viard, Tiphaine and Fournier-S’niehotta, Rapha{\"e}l},
