--- a/maehara.bib
+++ b/maehara.bib
@@ -1,3 +1,9 @@
+@inproceedings{alsuhaibani2018joint,
+  title={Joint Learning of Hierarchical Word Embeddings from a Corpus and a Taxonomy},
+  author={Alsuhaibani, Mohammed and Maehara, Takanori and Bollegala, Danushka},
+  booktitle={Proceedings of the 1st Conference on Automated Knowledge Base Construction (AKBC'19), University of Massachusetts Amherst, United States, May 20 - 22, 2019},
+  year={2019}
+}
 @inproceedings{ben2019submodular,
  author = {Ben Chugg and Takanori Maehara},
  title = {Submodular Stochastic Probing with Prices},
