--- a/maehara.bib
+++ b/maehara.bib
@@ -41,12 +41,14 @@
   title = {Subspace Selection via DR-Submodular Maximization on Lattices},
   booktitle = {Proceedings of the 33rd AAAI Conference on Artificial Intelligence (AAAI'19), Honolulu, Hawaii, USA, January 27 - February 1, 2019},
   year = {2019},
+  url = {https://www.aaai.org/Papers/AAAI/2019/AAAI-MaeharaT2.2673.pdf},
 }
 @inproceedings{maehara2019group,
   author = {Takanori Maehara and Yuma Inoue},
   title = {Group Decision Diagram ({GDD}): A Compact Representation for Permutations}, 
   booktitle = {in Proceedings of the 33rd AAAI Conference on Artificial Intelligence (AAAI'19), Honolulu, Hawaii, United States, January 27--February 1, 2019},
   year = {2019},
+  url = {https://www.aaai.org/Papers/AAAI/2019/AAAI-MaeharaT1.1874.pdf},
 }
 @article{takaguchi2018existence,
  author = {Taro Takaguchi and Takanori Maehara and Ken{-}ichi Kawarabayashi and Masashi Toyoda},
