--- a/aip-discopt.bib
+++ b/aip-discopt.bib
@@ -130,7 +130,7 @@
 @inproceedings{yabe2018causal,
  author = {Akihiro Yabe and Daisuke Hatano and Hanna Sumita and Shinji Ito and Naonori Kakimura and Takuro Fukunaga and Ken{-}ichi Kawarabayashi},
  title = {Causal Bandits with Propagating Inference},
- booktitle = {Proceedings of the 35th International Conference on Machine Learning (ICML,18), Stockholm, Sweden, July 10-15, 2018},
+ booktitle = {Proceedings of the 35th International Conference on Machine Learning (ICML'18), Stockholm, Sweden, July 10-15, 2018},
  pages = {5508--5516},
  year = {2018},
  url = {http://proceedings.mlr.press/v80/yabe18a.html},
