--- a/aip-discopt.bib
+++ b/aip-discopt.bib
@@ -221,3 +221,17 @@
  year = {2018},
  url = {https://doi.org/10.1137/1.9781611975031.21},
 }
+@inproceedings{maehara2017exact,
+  title={Exact computation of influence spread by binary decision diagrams},
+  author={Maehara, Takanori and Suzuki, Hirofumi and Ishihata, Masakazu},
+  booktitle={Proceedings of the 26th International Conference on World Wide Web (WWW'17), Perth, Australia, April 3 - 7, 2017},
+  pages={947--956},
+  year={2017},
+}
+@inproceedings{imaizumi2017tensor,
+  title={On tensor train rank minimization: Statistical efficiency and scalable algorithm},
+  author={Imaizumi, Masaaki and Maehara, Takanori and Hayashi, Kohei},
+  booktitle={Proceedings of the 31st Annual Conference on Neural Information Processing Systems (NIPS'17), Long Beach, California, United States, December 4 - 9, 2017},
+  pages={3930--3939},
+  year={2017}
+}
