--- a/aip-discopt.bib
+++ b/aip-discopt.bib
@@ -159,6 +159,14 @@
  year = {2018},
  url = {https://doi.org/10.1007/978-3-319-94776-1\_5},
 }
+@inproceedings{kawase2018computing,
+  title={Computing a subgame perfect equilibrium of a sequential matching game},
+  author={Kawase, Yasushi and Yamaguchi, Yutaro and Yokoi, Yu},
+  booktitle={Proceedings of the 2018 ACM Conference on Economics and Computation (EC'18), Ithaca, NY, USA, June 18-22, 2018},
+  pages={131--148},
+  year={2018},
+  organization={ACM}
+}
 @inproceedings{kawase2018submodular,
  author = {Yasushi Kawase and Hanna Sumita and Takuro Fukunaga},
  title = {Submodular Maximization with Uncertain Knapsack Capacity},
