--- a/maehara.bib
+++ b/maehara.bib
@@ -1,4 +1,13 @@
-@inproceedings{alsuhaibani2018joint,
+@article{maeharastochastic,
+  title={Stochastic packing integer programs with few queries},
+  author={Maehara, Takanori and Yamaguchi, Yutaro},
+  journal={Mathematical Programming, Series A},
+  pages={1--34},
+  year={2019},
+  month={March 15},
+  url={https://doi.org/10.1007/s10107-019-01388-x},
+}
+@inproceedings{alsuhaibani2019joint,
   title={Joint Learning of Hierarchical Word Embeddings from a Corpus and a Taxonomy},
   author={Alsuhaibani, Mohammed and Maehara, Takanori and Bollegala, Danushka},
   booktitle={Proceedings of the 1st Conference on Automated Knowledge Base Construction (AKBC'19), University of Massachusetts Amherst, United States, May 20 - 22, 2019},
