--- a/maehara.bib
+++ b/maehara.bib
@@ -1,4 +1,4 @@
-@article{maeharastochastic,
+@article{maehara2019stochastic,
   title={Stochastic packing integer programs with few queries},
   author={Maehara, Takanori and Yamaguchi, Yutaro},
   journal={Mathematical Programming, Series A},
