--- a/maehara.bib
+++ b/maehara.bib
@@ -1,3 +1,17 @@
+@inproceedings{ishihata2019stochastic,
+  title={Stochastic packing integer programs with few queries},
+  author={Ishihata, Masakazu and Maehara, Takanori},
+  booktitle = {Proceedings of the 28th International Joint Conference on Artificial Intelligence (IJCAI'19), Macau, China, August 10-16, 2018},
+  year = {2019},
+  pages={accepted},
+}
+@article{fukunaga2019computing,
+  title={Computing a tree having a small vertex cover},
+  author={Fukunaga, Takuro and Maehara, Takanori},
+  journal={Theoretical Computer Science},
+  year={2019},
+  pages={accepted},
+}
 @article{maehara2019stochastic,
   title={Stochastic packing integer programs with few queries},
   author={Maehara, Takanori and Yamaguchi, Yutaro},
