--- a/maehara.bib
+++ b/maehara.bib
@@ -1,5 +1,5 @@
-@inproceedings{ishihata2019stochastic,
-  title={Stochastic packing integer programs with few queries},
+@inproceedings{ishihata2019exact,
+  title={Exact Bernoulli Scan Statistics using Binary Decision Diagrams},
   author={Ishihata, Masakazu and Maehara, Takanori},
   booktitle = {Proceedings of the 28th International Joint Conference on Artificial Intelligence (IJCAI'19), Macau, China, August 10-16, 2018},
   year = {2019},
