--- a/aip-discopt.bib
+++ b/aip-discopt.bib
@@ -1,3 +1,17 @@
+@inproceedings{ishihata2019exact,
+  title={Exact Bernoulli Scan Statistics using Binary Decision Diagrams},
+  author={Ishihata, Masakazu and Maehara, Takanori},
+  booktitle = {Proceedings of the 28th International Joint Conference on Artificial Intelligence (IJCAI'19), Macau, China, August 10-16, 2018},
+  year = {2019},
+  pages={accepted},
+}
+@article{fukunaga2019computing,
+  title={Computing a tree having a small vertex cover},
+  author={Fukunaga, Takuro and Maehara, Takanori},
+  journal={Theoretical Computer Science},
+  year={2019},
+  pages={accepted},
+}
 @inproceedings{alsuhaibani2018joint,
   title={Joint Learning of Hierarchical Word Embeddings from a Corpus and a Taxonomy},
   author={Alsuhaibani, Mohammed and Maehara, Takanori and Bollegala, Danushka},
@@ -11,6 +25,15 @@
  year = {2019},
  url = {http://arxiv.org/abs/1810.01730},
  eprint = {1810.01730},
+}
+@article{maehara2019stochastic,
+  title={Stochastic packing integer programs with few queries},
+  author={Maehara, Takanori and Yamaguchi, Yutaro},
+  journal={Mathematical Programming, Series A},
+  pages={1--34},
+  year={2019},
+  month={March 15},
+  url={https://doi.org/10.1007/s10107-019-01388-x},
 }
 @article{viard2019augmenting,
   title={Augmenting content-based rating prediction with link stream features},
