--- a/aip-discopt.bib
+++ b/aip-discopt.bib
@@ -158,6 +158,13 @@
  year = {2018},
  url = {http://proceedings.mlr.press/v80/yabe18a.html},
 }
+@inproceedings{hara2018maximally,
+  author={Satoshi Hara and Kouichi Ikeno and Tasuku Soma and Takanori Maehara},
+  title={Maximally Invariant Data Perturbation as Explanation},
+  booktitle = {Proceedings of the 2018 ICML Workshop on Human Interpretability in Machine Learning (WHI'2018)},
+  pages={54--58}, 
+  year={2018},
+}
 @inproceedings{hatano2018computational,
   author    = {Daisuke Hatano and Yuichi Yoshida},
   title     = {Computational Aspects of the Preference Cores of Supermodular Two-Scenario Cooperative Games},
@@ -266,3 +273,10 @@
   pages={3930--3939},
   year={2017}
 }
+@inproceedings{nakashima2017optimization,
+  title={Optimization from Non-Uniform Samples},
+  author={Nakashima, So and Maehara, Takanori},
+  booktitle={NIPS 2017 workshop on Discrete Structures in Machine Learning (DISCML'17), December 8th, 2017},
+  year={2017},
+}
+
