--- a/maehara.bib
+++ b/maehara.bib
@@ -1,3 +1,9 @@
+@inproceedings{chen2019chance,
+author={Junjie Chen and Takanori Maehara},
+title={Chance-Constrained Submodular Knapsack Problem},
+booktitle={Proceedings of the 25th International Computing and Combinatorics Conference (COCOON 2019), Xian, China, July 29 - 31, 2019},
+year={2019},
+}
 @inproceedings{ishihata2019exact,
   title={Exact Bernoulli Scan Statistics using Binary Decision Diagrams},
   author={Ishihata, Masakazu and Maehara, Takanori},
