--- a/maehara.bib
+++ b/maehara.bib
@@ -1,8 +1,14 @@
+@inproceedings{hara2019convex,
+  title={Convex Hull Approximation of Nearly Optimal Lasso Solutions},
+  author={Satoshi Hara and Takanori Maehara},
+  booktitle={Proceedings of the 16th Pacific Rim International Conference on Artificial Intelligence (PRICAI'19), anuca Island, Cuvu, Fiji, August 26-30, 2019},
+  year={2019},
+}
 @inproceedings{chen2019chance,
-author={Junjie Chen and Takanori Maehara},
-title={Chance-Constrained Submodular Knapsack Problem},
-booktitle={Proceedings of the 25th International Computing and Combinatorics Conference (COCOON 2019), Xian, China, July 29 - 31, 2019},
-year={2019},
+  author={Junjie Chen and Takanori Maehara},
+  title={Chance-Constrained Submodular Knapsack Problem},
+  booktitle={Proceedings of the 25th International Computing and Combinatorics Conference (COCOON 2019), Xian, China, July 29 - 31, 2019},
+  year={2019},
 }
 @inproceedings{ishihata2019exact,
   title={Exact Bernoulli Scan Statistics using Binary Decision Diagrams},
