--- a/aip-discopt.bib
+++ b/aip-discopt.bib
@@ -30,7 +30,7 @@
   booktitle={Proceedings of the 1st Conference on Automated Knowledge Base Construction (AKBC'19), University of Massachusetts Amherst, United States, May 20 - 22, 2019},
   year={2019}
 }
-@inproceedings{ben2019submodular,
+@inproceedings{chugg2019submodular,
  author = {Ben Chugg and Takanori Maehara},
  title = {Submodular Stochastic Probing with Prices},
  booktitle = {Proceedings of the 6th International Conference on Control, Decision and Information Technologies (CoDIT'19), Paris, France, April 23-25, 2019},
