--- a/aip-discopt.bib
+++ b/aip-discopt.bib
@@ -1,3 +1,9 @@
+@inproceedings{hatano2019nonzerosum,
+  title={Non-zero-sum Stackelberg Budget Allocation Game for Computational Advertising},
+  author={Daisuke Hatano and Yuko Kuroki and Yasushi Kawase and Hanna Sumita and Naonori Kakimura and Ken-ichi Kawarabayashi},
+  booktitle={Proceedings of the 16th Pacific Rim International Conference on Artificial Intelligence (PRICAI'19), anuca Island, Cuvu, Fiji, August 26-30, 2019},
+  year={2019},
+}
 @inproceedings{hara2019convex,
   title={Convex Hull Approximation of Nearly Optimal Lasso Solutions},
   author={Satoshi Hara and Takanori Maehara},
