--- a/maehara.bib
+++ b/maehara.bib
@@ -1,3 +1,8 @@
+@conference{soh2019linear,
+  title={Linear Pseudo-Polynomial Factor Algorithm for Automaton Constrained Tree Knapsack Problem},
+  author={隈部壮 and 前原貴憲 and 新屋良磨},
+  boobtitle={Workshop on Optimization and Its Applications (OPTA'19), 筑波大学, 2019年6月29日-30日},
+}
 @inproceedings{hara2019convex,
   title={Convex Hull Approximation of Nearly Optimal Lasso Solutions},
   author={Satoshi Hara and Takanori Maehara},
