--- a/maehara.bib
+++ b/maehara.bib
@@ -2,13 +2,13 @@
   title={深層強化学習を用いた自動ブルドーザによる最適まき出し経路の探索},
   author={田島 大輔 and 浜本 研一 and 三浦 悟 and 登尾 大地 and タンカラット ブット and 小熊 正 and 黒沼 出 and 中山 裕 and 林 和彦 and 前原 貴徳},
   booktitle={2019年度土木学会全国大会 第74回年次学術講演会, 香川大学，2019年9月3日-5日},
-  year={2019J},
+  year={2019},
 }
 @conference{soh2019linear,
   title={Linear Pseudo-Polynomial Factor Algorithm for Automaton Constrained Tree Knapsack Problem},
   author={隈部壮 and 前原貴憲 and 新屋良磨},
   booktitle={Workshop on Optimization and Its Applications (OPTA'19), 筑波大学，2019年6月29日-30日},
-  year={2019J}
+  year={2019}
 }
 @inproceedings{hara2019convex,
   title={Convex Hull Approximation of Nearly Optimal Lasso Solutions},
