--- a/maehara.bib
+++ b/maehara.bib
@@ -21,6 +21,7 @@
   title={Chance-Constrained Submodular Knapsack Problem},
   booktitle={Proceedings of the 25th International Computing and Combinatorics Conference (COCOON 2019), Xian, China, July 29 - 31, 2019},
   year={2019},
+  url={https://doi.org/10.1007/978-3-030-26176-4_9}
 }
 @inproceedings{ishihata2019exact,
   title={Exact Bernoulli Scan Statistics using Binary Decision Diagrams},
