--- a/maehara-non-reviewed.bib
+++ b/maehara-non-reviewed.bib
@@ -10,3 +10,52 @@
   booktitle={Workshop on Optimization and Its Applications (OPTA'19), 筑波大学，2019年6月29日-30日},
   year={2019}
 }
+@article{fukuchi2019pretending,
+ author = {Kazuto Fukuchi and Satoshi Hara and Takanori Maehara},
+ title = {Pretending Fair Decisions via Stealthily Biased Sampling},
+ journal = {CoRR},
+ volume = {abs/1901.08291},
+ year = {2019},
+ url = {http://arxiv.org/abs/1901.08291},
+}
+@article{maehara2019optimal,
+ author = {Takanori Maehara and Kazutoshi Ando},
+ title = {Optimal Algorithm to Reconstruct a Tree from a Subtree Distance},
+ journal = {CoRR},
+ volume = {abs/1902.08742},
+ year = {2019},
+ url = {http://arxiv.org/abs/1902.08742},
+}
+@article{maehara2014efficient,
+ author = {Takanori Maehara and Mitsuru Kusumoto and Ken{-}ichi Kawarabayashi},
+ title = {Efficient SimRank Computation via Linearization},
+ journal = {CoRR},
+ volume = {abs/1411.7228},
+ year = {2014},
+ url = {http://arxiv.org/abs/1411.7228},
+ eprint = {1411.7228},
+}
+@article{hara2018maximally,
+ author = {Satoshi Hara and Kouichi Ikeno and Tasuku Soma and Takanori Maehara},
+ title = {Maximally Invariant Data Perturbation as Explanation},
+ journal = {CoRR},
+ volume = {abs/1806.07004},
+ year = {2018},
+ url = {http://arxiv.org/abs/1806.07004},
+}
+@article{ishihata2018algorithmic,
+ author = {Masakazu Ishihata and Takanori Maehara and Tomas Rigaux},
+ title = {Algorithmic Meta-Theorems for Monotone Submodular Maximization},
+ journal = {CoRR},
+ volume = {abs/1807.04575},
+ year = {2018},
+ url = {http://arxiv.org/abs/1807.04575},
+}
+@article{komiyama2018simple,
+ author = {Junpei Komiyama and Takanori Maehara},
+ title = {A Simple Way to Deal with Cherry-picking},
+ journal = {CoRR},
+ volume = {abs/1810.04996},
+ year = {2018},
+ url = {http://arxiv.org/abs/1810.04996},
+}
