--- a/maehara.bib
+++ b/maehara.bib
@@ -3,6 +3,7 @@
   author={Satoshi Hara and Takanori Maehara},
   booktitle={Proceedings of the 16th Pacific Rim International Conference on Artificial Intelligence (PRICAI'19), anuca Island, Cuvu, Fiji, August 26-30, 2019},
   year={2019},
+  url = {http://arxiv.org/abs/1810.05992},
 }
 @inproceedings{chen2019chance,
   author={Junjie Chen and Takanori Maehara},
@@ -55,22 +56,6 @@
  pages = {248--260},
  year = {2019},
  url = {https://doi.org/10.1007/978-3-030-10564-8\_20},
-}
-@misc{fukuchi2019pretending,
- author = {Kazuto Fukuchi and Satoshi Hara and Takanori Maehara},
- title = {Pretending Fair Decisions via Stealthily Biased Sampling},
- journal = {CoRR},
- volume = {abs/1901.08291},
- year = {2019},
- url = {http://arxiv.org/abs/1901.08291},
-}
-@misc{maehara2019optimal,
- author = {Takanori Maehara and Kazutoshi Ando},
- title = {Optimal Algorithm to Reconstruct a Tree from a Subtree Distance},
- journal = {CoRR},
- volume = {abs/1902.08742},
- year = {2019},
- url = {http://arxiv.org/abs/1902.08742},
 }
 @inproceedings{nakashima2019subspace,
   author = {So Nakashima and Takanori Maehara}, 
@@ -151,6 +136,17 @@
  year = {2018},
  url = {http://proceedings.mlr.press/v84/imaizumi18a.html},
 }
+@article{alsuhaibani2018jointly,
+  title={Jointly learning word embeddings using a corpus and a knowledge base},
+  author={Alsuhaibani, Mohammed and Bollegala, Danushka and Maehara, Takanori and Kawarabayashi, Ken-ichi},
+  journal={PloS ONE},
+  volume={13},
+  number={3},
+  pages={e0193094},
+  year={2018},
+  publisher={Public Library of Science},
+  url={https://doi.org/10.1371/journal.pone.0193094},
+}
 @article{takabe2018typical,
   title={Typical approximation performance for maximum coverage problem},
   author={Satoshi Takabe and Takanori Maehara and Koji Hukushima},
@@ -177,38 +173,6 @@
  pages = {293--310},
  year = {2018},
  url = {https://doi.org/10.1137/1.9781611975031.21},
-}
-@misc{hara2018maximally,
- author = {Satoshi Hara and Kouichi Ikeno and Tasuku Soma and Takanori Maehara},
- title = {Maximally Invariant Data Perturbation as Explanation},
- journal = {CoRR},
- volume = {abs/1806.07004},
- year = {2018},
- url = {http://arxiv.org/abs/1806.07004},
-}
-@misc{ishihata2018algorithmic,
- author = {Masakazu Ishihata and Takanori Maehara and Tomas Rigaux},
- title = {Algorithmic Meta-Theorems for Monotone Submodular Maximization},
- journal = {CoRR},
- volume = {abs/1807.04575},
- year = {2018},
- url = {http://arxiv.org/abs/1807.04575},
-}
-@misc{komiyama2018simple,
- author = {Junpei Komiyama and Takanori Maehara},
- title = {A Simple Way to Deal with Cherry-picking},
- journal = {CoRR},
- volume = {abs/1810.04996},
- year = {2018},
- url = {http://arxiv.org/abs/1810.04996},
-}
-@misc{hara2018convex,
- author = {Satoshi Hara and Takanori Maehara},
- title = {Convex Hull Approximation of Nearly Optimal Lasso Solutions},
- journal = {CoRR},
- volume = {abs/1810.05992},
- year = {2018},
- url = {http://arxiv.org/abs/1810.05992},
 }
 @inproceedings{maehara2017optimal,
  author = {Takanori Maehara and Yasushi Kawase and Hanna Sumita and Katsuya Tono and Ken{-}ichi Kawarabayashi},
@@ -416,15 +380,6 @@
  pages = {325--336},
  year = {2014},
  url = {https://doi.org/10.1145/2588555.2610526},
-}
-@misc{maehara2014efficient,
- author = {Takanori Maehara and Mitsuru Kusumoto and Ken{-}ichi Kawarabayashi},
- title = {Efficient SimRank Computation via Linearization},
- journal = {CoRR},
- volume = {abs/1411.7228},
- year = {2014},
- url = {http://arxiv.org/abs/1411.7228},
- eprint = {1411.7228},
 }
 @article{maehara2011algorithm,
  author = {Takanori Maehara and Kazuo Murota},
