--- a/maehara.bib
+++ b/maehara.bib
@@ -17,14 +17,13 @@
   author={Ishihata, Masakazu and Maehara, Takanori},
   booktitle = {Proceedings of the 28th International Joint Conference on Artificial Intelligence (IJCAI'19), Macau, China, August 10-16, 2018},
   year = {2019},
-  pages={accepted},
 }
 @article{fukunaga2019computing,
   title={Computing a tree having a small vertex cover},
   author={Fukunaga, Takuro and Maehara, Takanori},
   journal={Theoretical Computer Science},
   year={2019},
-  pages={accepted},
+  url = {https://doi.org/10.1016/j.tcs.2019.05.018},
 }
 @article{maehara2019stochastic,
   title={Stochastic packing integer programs with few queries},
@@ -62,14 +61,16 @@
   title = {Subspace Selection via DR-Submodular Maximization on Lattices},
   booktitle = {Proceedings of the 33rd AAAI Conference on Artificial Intelligence (AAAI'19), Honolulu, Hawaii, USA, January 27 - February 1, 2019},
   year = {2019},
-  url = {https://www.aaai.org/Papers/AAAI/2019/AAAI-MaeharaT2.2673.pdf},
+  pages = {4618-4625},
+  url = {https://doi.org/10.1609/aaai.v33i01.33014618},
 }
 @inproceedings{maehara2019group,
   author = {Takanori Maehara and Yuma Inoue},
   title = {Group Decision Diagram ({GDD}): A Compact Representation for Permutations}, 
   booktitle = {in Proceedings of the 33rd AAAI Conference on Artificial Intelligence (AAAI'19), Honolulu, Hawaii, United States, January 27--February 1, 2019},
   year = {2019},
-  url = {https://www.aaai.org/Papers/AAAI/2019/AAAI-MaeharaT1.1874.pdf},
+  pages = {2986-2994},
+  url = {https://doi.org/10.1609/aaai.v33i01.33012986},
 }
 @article{takaguchi2018existence,
  author = {Taro Takaguchi and Takanori Maehara and Ken{-}ichi Kawarabayashi and Masashi Toyoda},
