--- a/maehara.bib
+++ b/maehara.bib
@@ -8,7 +8,7 @@
 @inproceedings{chen2019chance,
   author={Junjie Chen and Takanori Maehara},
   title={Chance-Constrained Submodular Knapsack Problem},
-  booktitle={Proceedings of the 25th International Computing and Combinatorics Conference (COCOON 2019), Xian, China, July 29 - 31, 2019},
+  booktitle={Proceedings of the 25th International Computing and Combinatorics Conference (COCOON'19), Xian, China, July 29 - 31, 2019},
   year={2019},
   url={https://doi.org/10.1007/978-3-030-26176-4_9}
 }
@@ -367,7 +367,7 @@
 @inproceedings{maehara2014computing,
  author = {Takanori Maehara and Takuya Akiba and Yoichi Iwata and Ken{-}ichi Kawarabayashi},
  title = {Computing Personalized PageRank Quickly by Exploiting Graph Structures},
- journal = {Proceedings of the 40th International Conference on Very Large Data Bases (VLDB'14), Hangzhou, China, 1-5, September, 2014},
+ booktitle = {Proceedings of the 40th International Conference on Very Large Data Bases (VLDB'14), Hangzhou, China, 1-5, September, 2014},
  volume = {7},
  number = {12},
  pages = {1023--1034},
