--- a/maehara.bib
+++ b/maehara.bib
@@ -364,15 +364,16 @@
  year = {2015},
  url = {https://doi.org/10.1109/IFIPNetworking.2015.7145331},
 }
-@inproceedings{maehara2014computing,
+@article{maehara2014computing,
  author = {Takanori Maehara and Takuya Akiba and Yoichi Iwata and Ken{-}ichi Kawarabayashi},
  title = {Computing Personalized PageRank Quickly by Exploiting Graph Structures},
- booktitle = {Proceedings of the 40th International Conference on Very Large Data Bases (VLDB'14), Hangzhou, China, 1-5, September, 2014},
+ journal={Proceedings of the VLDB Endowment (The 40th International Conference on Very Large Data Bases (VLDB'14), Hangzhou, China, 1-5, September, 2014)},
  volume = {7},
  number = {12},
  pages = {1023--1034},
  year = {2014},
- url = {http://www.vldb.org/pvldb/vol7/p1023-maehara.pdf},
+ Month = {August},
+ url = {https://doi.org/10.14778/2732977.2732978},
 }
 @inproceedings{kusumoto2014scalable,
  author = {Mitsuru Kusumoto and Takanori Maehara and Ken{-}ichi Kawarabayashi},
