--- a/maehara-non-reviewed.bib
+++ b/maehara-non-reviewed.bib
@@ -1,8 +1,25 @@
+@conference{soh2019linear,
+  title={スパイダーメトリック上での r-gather クラスタリング問題に対する FPT アルゴリズムと NP 困難性},
+  author={隈部壮 and 前原貴憲},
+  booktitle={応用数理学会 2019年度年会, 東京大学駒場キャンパス, 2019年9月3日-5日},
+  year={2019}
+}
 @conference{tajima2019deep,
   title={深層強化学習を用いた自動ブルドーザによる最適まき出し経路の探索},
   author={田島 大輔 and 浜本 研一 and 三浦 悟 and 登尾 大地 and タンカラット ブット and 小熊 正 and 黒沼 出 and 中山 裕 and 林 和彦 and 前原 貴徳},
   booktitle={2019年度土木学会全国大会 第74回年次学術講演会, 香川大学，2019年9月3日-5日},
   year={2019},
+}
+@article{
+  title={クエリ可能な確率的組合せ最適化に対する統一的枠組み},
+  author={前原 貴憲 and 山口 勇太郎},
+  journal={応用数理},
+  volume={29},
+  number={2},
+  pages={2-9},
+  year={2019},
+  month={7},
+  misc={invited},
 }
 @conference{soh2019linear,
   title={Linear Pseudo-Polynomial Factor Algorithm for Automaton Constrained Tree Knapsack Problem},
