--- a/maehara-non-reviewed.bib
+++ b/maehara-non-reviewed.bib
@@ -76,3 +76,15 @@
  year = {2018},
  url = {http://arxiv.org/abs/1810.04996},
 }
+@conference{nakashima2018lattice,
+  title={束上のDR-劣モジュラ性による部分空間選択},
+  author={中島 蒼 and 前原 貴憲},
+  booktitle={日本応用数理学会 2018年年会, 名古屋, 2018年9月3日-5日},
+  year={2018},
+}
+@conference{maehara2018stochastic,
+  title={Stochastic Combinatorial Optimization with Queries},
+  author={Takanori Maehara and Yutaro Yamaguchi},
+  booktitle={SIAM Conference on Discrete Mathematics, University of Colorado, Denver, Denver, Colorado, United States, June 4-8, 2018.}
+  year={2018},
+}
