--- a/maehara-non-reviewed.bib
+++ b/maehara-non-reviewed.bib
@@ -10,7 +10,7 @@
   booktitle={2019年度土木学会全国大会 第74回年次学術講演会, 香川大学，2019年9月3日-5日},
   year={2019},
 }
-@article{
+@article{maehara2019unified,
   title={クエリ可能な確率的組合せ最適化に対する統一的枠組み},
   author={前原 貴憲 and 山口 勇太郎},
   journal={応用数理},
