--- a/maehara-non-reviewed.bib
+++ b/maehara-non-reviewed.bib
@@ -85,6 +85,6 @@
 @conference{maehara2018stochastic,
   title={Stochastic Combinatorial Optimization with Queries},
   author={Takanori Maehara and Yutaro Yamaguchi},
-  booktitle={SIAM Conference on Discrete Mathematics, University of Colorado, Denver, Denver, Colorado, United States, June 4-8, 2018.}
+  booktitle={SIAM Conference on Discrete Mathematics, University of Colorado, Denver, Denver, Colorado, United States, June 4-8, 2018.},
   year={2018},
 }
