--- a/maehara-non-reviewed.bib
+++ b/maehara-non-reviewed.bib
@@ -1,4 +1,4 @@
-@conference{soh2019linear,
+@inproceedings{soh2019linear,
   title={スパイダーメトリック上での r-gather クラスタリング問題に対する FPT アルゴリズムと NP 困難性},
   author={隈部壮 and 前原貴憲},
   booktitle={応用数理学会 2019年度年会, 東京大学駒場キャンパス, 2019年9月3日-5日},
