--- a/maehara-non-reviewed.bib
+++ b/maehara-non-reviewed.bib
@@ -1,4 +1,4 @@
-@inproceedings{soh2019linear,
+@inproceedings{soh2019spider,
   title={スパイダーメトリック上での r-gather クラスタリング問題に対する FPT アルゴリズムと NP 困難性},
   author={隈部壮 and 前原貴憲},
   booktitle={応用数理学会 2019年度年会, 東京大学駒場キャンパス, 2019年9月3日-5日},
@@ -21,7 +21,7 @@
   month={7},
   misc={invited},
 }
-@conference{soh2019linear,
+@inproceedings{soh2019linear,
   title={Linear Pseudo-Polynomial Factor Algorithm for Automaton Constrained Tree Knapsack Problem},
   author={隈部壮 and 前原貴憲 and 新屋良磨},
   booktitle={Workshop on Optimization and Its Applications (OPTA'19), 筑波大学，2019年6月29日-30日},
