--- a/maehara-non-reviewed.bib
+++ b/maehara-non-reviewed.bib
@@ -88,3 +88,9 @@
   booktitle={SIAM Conference on Discrete Mathematics, University of Colorado, Denver, Denver, Colorado, United States, June 4-8, 2018.},
   year={2018},
 }
+@inproceedings{maehara2018learning,
+  title={Learning for Tuning Parameters of NUOPT MILP Solver},
+  author={Takanori Maehara ad Kensuke Otsuki and Yasumi Ishibashi and Koichi Fujii and Tomohiro Takahashi},
+  year={2018},
+  booktitle={International Symposium on Mathematical Programming (ISMP'18), Bordeaux, France, July 1-6, 2018},
+}
