--- a/maehara-non-reviewed.bib
+++ b/maehara-non-reviewed.bib
@@ -4,7 +4,7 @@
   booktitle={応用数理学会 2019年度年会, 東京大学駒場キャンパス, 2019年9月3日-5日},
   year={2019}
 }
-@conference{tajima2019deep,
+@inproceedings{tajima2019deep,
   title={深層強化学習を用いた自動ブルドーザによる最適まき出し経路の探索},
   author={田島 大輔 and 浜本 研一 and 三浦 悟 and 登尾 大地 and タンカラット ブット and 小熊 正 and 黒沼 出 and 中山 裕 and 林 和彦 and 前原 貴徳},
   booktitle={2019年度土木学会全国大会 第74回年次学術講演会, 香川大学，2019年9月3日-5日},
@@ -76,13 +76,13 @@
  year = {2018},
  url = {http://arxiv.org/abs/1810.04996},
 }
-@conference{nakashima2018lattice,
+@inproceedings{nakashima2018lattice,
   title={束上のDR-劣モジュラ性による部分空間選択},
   author={中島 蒼 and 前原 貴憲},
-  booktitle={日本応用数理学会 2018年年会, 名古屋, 2018年9月3日-5日},
+  booktitle={日本応用数理学会 2018年年会, 名古屋大学東山キャンパス, 2018年9月3日-5日},
   year={2018},
 }
-@conference{maehara2018stochastic,
+@inproceedings{maehara2018stochastic,
   title={Stochastic Combinatorial Optimization with Queries},
   author={Takanori Maehara and Yutaro Yamaguchi},
   booktitle={SIAM Conference on Discrete Mathematics, University of Colorado, Denver, Denver, Colorado, United States, June 4-8, 2018.},
@@ -93,4 +93,22 @@
   author={Takanori Maehara ad Kensuke Otsuki and Yasumi Ishibashi and Koichi Fujii and Tomohiro Takahashi},
   year={2018},
   booktitle={International Symposium on Mathematical Programming (ISMP'18), Bordeaux, France, July 1-6, 2018},
+}
+@inproceedings{sugiyama2017pu,
+  title={PU-データに対するスパースSVMの同時セーフスクリーニング},
+  author={杉山太信 and 前原貴憲},
+  year={2017},
+  booktitle={第20回情報論的学習理論ワークショップ (IBIS2017), ディスカッショントラック, 東京大学本郷キャンパス, 2017年11月8日--11日, 2017},
+}
+@inproceedings{hara2017enumerating,
+  author={原聡 and 石畠正和 and 前原貴憲},
+  title={機械学習モデルの列挙},
+  booktitle={第20回情報論的学習理論ワークショップ (IBIS2017), ディスカッショントラック, 東京大学本郷キャンパス, 2017年11月8日--11日, 2017},
+  year={2017}
+},
+@inproceedings{osogami2017dynamic,
+  author={恐神貴行 and Rudy Raymond and Akshay Goel and 白井朋之 and 前原貴憲},
+  title={動的行列式点過程},
+  year={2017},
+  booktitle={第20回情報論的学習理論ワークショップ (IBIS2017), ディスカッショントラック, 東京大学, 2017年11月8日--11日, 2017},
 }
