--- a/maehara-non-reviewed.bib
+++ b/maehara-non-reviewed.bib
@@ -112,3 +112,27 @@
   year={2017},
   booktitle={第20回情報論的学習理論ワークショップ (IBIS2017), ディスカッショントラック, 東京大学, 2017年11月8日--11日, 2017},
 }
+@inproceedings{maehara2017mip,
+  author={前原貴憲 and 石橋保身 and 大槻兼資 and 藤井浩一},
+  year={2017},
+  title={機械学習を用いた MIP ソルバーのパラメータチューニング},
+  booktitle={数理システムユーザーコンファレンス, 品川, 2017年11月2日},
+}
+@inproceedings{sugiyama2017simultaneous,
+  author={Taishin Sugiyama and Takanori Maehara},
+  year={2017},
+  title={Simultaneous Screening for Positive-Unlabeled Sparse Support Vector Machines}
+  booktitle={International Meeting on High-Dimensional Data-Driven Science (HD3-2017), Kyoto, Japan, November 10th--13th, 2017},
+}
+@inproceedings{maehara2017query,
+  author={前原貴憲},
+  year={2017},
+  title={クエリ可能な確率的組合せ最適化問題},
+  booktitle={第29回RAMPシンポジウム (招待講演), 筑波大学, 2017年10月12--13日},
+}
+@inproceedings{maehara2017stochastic,
+  author={Takanori Maehara},
+  year={2017},
+  title={Stochastic Packing Integer Programming Problems with Few Queries},
+  booktitle={France / Japan Machine Learning Workshop, Paris, France, September 11th--12th, 2017},
+}
