--- a/maehara-non-reviewed.bib
+++ b/maehara-non-reviewed.bib
@@ -122,7 +122,7 @@
   author={Taishin Sugiyama and Takanori Maehara},
   year={2017},
   title={Simultaneous Screening for Positive-Unlabeled Sparse Support Vector Machines}
-  booktitle={International Meeting on High-Dimensional Data-Driven Science (HD3-2017), Kyoto, Japan, November 10th--13th, 2017},
+  booktitle={International Meeting on High-Dimensional Data-Driven Science (HD3-2017), Kyoto, Japan, November 10--13, 2017},
 }
 @inproceedings{maehara2017query,
   author={前原貴憲},
@@ -134,5 +134,5 @@
   author={Takanori Maehara},
   year={2017},
   title={Stochastic Packing Integer Programming Problems with Few Queries},
-  booktitle={France / Japan Machine Learning Workshop, Paris, France, September 11th--12th, 2017},
+  booktitle={France / Japan Machine Learning Workshop, Ulm Campus, Ecole Normale Superieure, Paris, France, September 11-12, 2017},
 }
