--- a/maehara-non-reviewed.bib
+++ b/maehara-non-reviewed.bib
@@ -121,7 +121,7 @@
 @inproceedings{sugiyama2017simultaneous,
   author={Taishin Sugiyama and Takanori Maehara},
   year={2017},
-  title={Simultaneous Screening for Positive-Unlabeled Sparse Support Vector Machines}
+  title={Simultaneous Screening for Positive-Unlabeled Sparse Support Vector Machines},
   booktitle={International Meeting on High-Dimensional Data-Driven Science (HD3-2017), Kyoto, Japan, November 10--13, 2017},
 }
 @inproceedings{maehara2017query,
