--- a/maehara-non-reviewed.bib
+++ b/maehara-non-reviewed.bib
@@ -136,3 +136,9 @@
   title={Stochastic Packing Integer Programming Problems with Few Queries},
   booktitle={France / Japan Machine Learning Workshop, Ulm Campus, Ecole Normale Superieure, Paris, France, September 11-12, 2017},
 }
+@inproceedings{takabe2017max,
+  author={高邉賢史 and 福島孝治 and 前原貴憲},
+  year={2017},
+  title={最大カバー問題に対する確率伝搬法を利用したデシメーションアルゴリズム},
+  booktitle={日本物理学会 第72回年次大会, 大阪大学豊中キャンパス, 2017年3月17日--20日},
+}
