--- a/maehara.bib
+++ b/maehara.bib
@@ -18,6 +18,8 @@
   author={Ishihata, Masakazu and Maehara, Takanori},
   booktitle = {Proceedings of the 28th International Joint Conference on Artificial Intelligence (IJCAI'19), Macau, China, August 10-16, 2018},
   year = {2019},
+  pages = {5737-5743},
+  url={https://doi.org/10.24963/ijcai.2019/795},
 }
 @article{fukunaga2019computing,
   title={Computing a tree having a small vertex cover},
