--- a/aip-discopt.bib
+++ b/aip-discopt.bib
@@ -8,6 +8,7 @@
   title={Convex Hull Approximation of Nearly Optimal Lasso Solutions},
   author={Satoshi Hara and Takanori Maehara},
   booktitle={Proceedings of the 16th Pacific Rim International Conference on Artificial Intelligence (PRICAI'19), anuca Island, Cuvu, Fiji, August 26-30, 2019},
+  pages={350-363},
   year={2019},
 }
 @inproceedings{chen2019chance,
