--- a/maehara.bib
+++ b/maehara.bib
@@ -3,6 +3,7 @@
   author={Satoshi Hara and Takanori Maehara},
   booktitle={Proceedings of the 16th Pacific Rim International Conference on Artificial Intelligence (PRICAI'19), anuca Island, Cuvu, Fiji, August 26-30, 2019},
   year={2019},
+  pages={350-363},
   url = {http://arxiv.org/abs/1810.05992},
 }
 @inproceedings{chen2019chance,
