--- a/maehara.bib
+++ b/maehara.bib
@@ -4,7 +4,7 @@
   booktitle={Proceedings of the 16th Pacific Rim International Conference on Artificial Intelligence (PRICAI'19), anuca Island, Cuvu, Fiji, August 26-30, 2019},
   year={2019},
   pages={350-363},
-  url = {http://arxiv.org/abs/1810.05992},
+  url = {https://doi.org/10.1007/978-3-030-29911-8_27},
 }
 @inproceedings{chen2019chance,
   author={Junjie Chen and Takanori Maehara},
