--- a/aip-discopt.bib
+++ b/aip-discopt.bib
@@ -3,12 +3,15 @@
   author={Daisuke Hatano and Yuko Kuroki and Yasushi Kawase and Hanna Sumita and Naonori Kakimura and Ken-ichi Kawarabayashi},
   booktitle={Proceedings of the 16th Pacific Rim International Conference on Artificial Intelligence (PRICAI'19), anuca Island, Cuvu, Fiji, August 26-30, 2019},
   year={2019},
+  pages={568-582},
+  url={https://doi.org/10.1007/978-3-030-29908-8_45},
 }
 @inproceedings{hara2019convex,
   title={Convex Hull Approximation of Nearly Optimal Lasso Solutions},
   author={Satoshi Hara and Takanori Maehara},
   booktitle={Proceedings of the 16th Pacific Rim International Conference on Artificial Intelligence (PRICAI'19), anuca Island, Cuvu, Fiji, August 26-30, 2019},
   pages={350-363},
+  url = {https://doi.org/10.1007/978-3-030-29911-8_27},
   year={2019},
 }
 @inproceedings{chen2019chance,
