--- a/maehara.bib
+++ b/maehara.bib
@@ -1,3 +1,9 @@
+@inproceedings{hara2019data,
+  author={Satoshi Hara and Atsushi Nitanda and Takanori Maehara},
+  title={Data Cleansing for Models Trained with SGD},
+  booktitle = {Proceedings of the 33rd Annual Conference on Neural Information Processing Systems (NeurIPS'19), December 8 - 14, 2019, Vancouver, Canada},
+  year = {2019},
+}
 @inproceedings{hara2019convex,
   title={Convex Hull Approximation of Nearly Optimal Lasso Solutions},
   author={Satoshi Hara and Takanori Maehara},
@@ -206,7 +212,7 @@
 @inproceedings{imaizumi2017tensor,
  author = {Masaaki Imaizumi and Takanori Maehara and Kohei Hayashi},
  title = {On Tensor Train Rank Minimization : Statistical Efficiency and Scalable Algorithm},
- booktitle = {Proceedings of the 30th Annual Conference on Neural Information Processing Systems (NIPS'17), December 4-9 2017, Long Beach, CA, {USA}},
+ booktitle = {Proceedings of the 31st Annual Conference on Neural Information Processing Systems (NIPS'17), December 4-9 2017, Long Beach, CA, {USA}},
  pages = {3933--3942},
  year = {2017},
  url = {http://papers.nips.cc/paper/6982-on-tensor-train-rank-minimization-statistical-efficiency-and-scalable-algorithm},
