--- a/aip-discopt.bib
+++ b/aip-discopt.bib
@@ -1,3 +1,9 @@
+@inproceedings{hara2019data,
+  author={Satoshi Hara and Atsushi Nitanda and Takanori Maehara},
+  title={Data Cleansing for Models Trained with SGD},
+  booktitle = {Proceedings of the 33rd Annual Conference on Neural Information Processing Systems (NeurIPS'19), December 8 - 14, 2019, Vancouver, Canada},
+  year = {2019},
+}
 @inproceedings{hatano2019nonzerosum,
   title={Non-zero-sum Stackelberg Budget Allocation Game for Computational Advertising},
   author={Daisuke Hatano and Yuko Kuroki and Yasushi Kawase and Hanna Sumita and Naonori Kakimura and Ken-ichi Kawarabayashi},
@@ -302,4 +308,3 @@
   booktitle={NIPS 2017 workshop on Discrete Structures in Machine Learning (DISCML'17), December 8th, 2017},
   year={2017},
 }
-
