--- a/aip-discopt.bib
+++ b/aip-discopt.bib
@@ -1,3 +1,15 @@
+@inproceedings{ito2019improved,
+  author={Shinji Ito and Daisuke Hatano and Hanna Sumita and Kei Takemura and Takuro Fukunaga and Naonori Kakimura and {Ken-ichi} Kawarabayashi},
+  title={Improved Regret Bounds for Bandit Combinatorial Optimization},
+  booktitle = {Proceedings of the 33rd Annual Conference on Neural Information Processing Systems (NeurIPS'19), December 8 - 14, 2019, Vancouver, Canada},
+  year = {2019},
+}
+@inproceedings{ito2019oracle,
+  title={Oracle-Efficient Algorithms for Online Linear Optimization with Bandit Feedback},
+  author={Shinji Ito and Daisuke Hatano and Hanna Sumita and Kei Takemura and Takuro Fukunaga and Naonori Kakimura and {Ken-ichi} Kawarabayashi},
+  booktitle = {Proceedings of the 33rd Annual Conference on Neural Information Processing Systems (NeurIPS'19), December 8 - 14, 2019, Vancouver, Canada},
+  year = {2019},
+}
 @inproceedings{hara2019data,
   author={Satoshi Hara and Atsushi Nitanda and Takanori Maehara},
   title={Data Cleansing for Models Trained with SGD},
