--- a/maehara-non-reviewed.bib
+++ b/maehara-non-reviewed.bib
@@ -1,12 +1,12 @@
 @inproceedings{maehara2019query,
-  author={前原貴憲 and \underline{山口 勇太郎}},
+  author={前原 貴憲 and 山口 勇太郎$^*$},
   title={クエリ可能な確率的組合せ最適化},
   booktitle={第18回情報科学技術フォーラム (FIT 2019), 岡山大学, 岡山県岡山市, 2019年9月},
   year={2019},
 }
 @inproceedings{soh2019spider,
   title={スパイダーメトリック上での r-gather クラスタリング問題に対する FPT アルゴリズムと NP 困難性},
-  author={隈部壮 and 前原貴憲},
+  author={隈部 壮 and 前原 貴憲},
   booktitle={応用数理学会 2019年度年会, 東京大学駒場キャンパス, 2019年9月3日-5日},
   year={2019}
 }
