--- a/maehara-non-reviewed.bib
+++ b/maehara-non-reviewed.bib
@@ -148,3 +148,9 @@
   title={最大カバー問題に対する確率伝搬法を利用したデシメーションアルゴリズム},
   booktitle={日本物理学会 第72回年次大会, 大阪大学豊中キャンパス, 2017年3月17日--20日},
 }
+@inproceedings{hara2017enumerating,
+  author={原聡 and 前原貴憲},
+  title={特徴量選択のためのLasso解列挙},
+  booktitle={日本オペレーションズ・リサーチ学会 2017年春季研究発表会, 沖縄県市町村自治会館, 2017年3月15日--17日},
+  year={2017},
+}
