--- a/maehara-non-reviewed.bib
+++ b/maehara-non-reviewed.bib
@@ -1,18 +1,18 @@
 @inproceedings{maehara2019query,
-  author={前原 貴憲 and 山口 勇太郎$^*$},
+  author={前原 貴憲 and 山口 勇太郎*},
   title={クエリ可能な確率的組合せ最適化},
   booktitle={第18回情報科学技術フォーラム (FIT 2019), 岡山大学, 岡山県岡山市, 2019年9月},
   year={2019},
 }
 @inproceedings{soh2019spider,
   title={スパイダーメトリック上での r-gather クラスタリング問題に対する FPT アルゴリズムと NP 困難性},
-  author={隈部 壮 and 前原 貴憲},
+  author={隈部 壮* and 前原 貴憲},
   booktitle={応用数理学会 2019年度年会, 東京大学駒場キャンパス, 2019年9月3日-5日},
   year={2019}
 }
 @inproceedings{tajima2019deep,
   title={深層強化学習を用いた自動ブルドーザによる最適まき出し経路の探索},
-  author={田島 大輔 and 浜本 研一 and 三浦 悟 and 登尾 大地 and タンカラット ブット and 小熊 正 and 黒沼 出 and 中山 裕 and 林 和彦 and 前原 貴徳},
+  author={田島 大輔* and 浜本 研一 and 三浦 悟 and 登尾 大地 and タンカラット ブット and 小熊 正 and 黒沼 出 and 中山 裕 and 林 和彦 and 前原 貴徳},
   booktitle={2019年度土木学会全国大会 第74回年次学術講演会, 香川大学，2019年9月3日-5日},
   year={2019},
 }
@@ -29,7 +29,7 @@
 }
 @inproceedings{soh2019linear,
   title={Linear Pseudo-Polynomial Factor Algorithm for Automaton Constrained Tree Knapsack Problem},
-  author={隈部壮 and 前原貴憲 and 新屋良磨},
+  author={隈部 壮* and 前原 貴憲 and 新屋 良磨},
   booktitle={Workshop on Optimization and Its Applications (OPTA'19), 筑波大学，2019年6月29日-30日},
   year={2019}
 }
@@ -84,72 +84,72 @@
 }
 @inproceedings{nakashima2018lattice,
   title={束上のDR-劣モジュラ性による部分空間選択},
-  author={中島 蒼 and 前原 貴憲},
+  author={中島 蒼* and 前原 貴憲},
   booktitle={日本応用数理学会 2018年年会, 名古屋大学東山キャンパス, 2018年9月3日-5日},
   year={2018},
 }
 @inproceedings{maehara2018stochastic,
   title={Stochastic Combinatorial Optimization with Queries},
-  author={Takanori Maehara and Yutaro Yamaguchi},
+  author={Takanori Maehara* and Yutaro Yamaguchi},
   booktitle={SIAM Conference on Discrete Mathematics, University of Colorado, Denver, Denver, Colorado, United States, June 4-8, 2018.},
   year={2018},
 }
 @inproceedings{maehara2018learning,
   title={Learning for Tuning Parameters of NUOPT MILP Solver},
-  author={Takanori Maehara ad Kensuke Otsuki and Yasumi Ishibashi and Koichi Fujii and Tomohiro Takahashi},
+  author={Takanori Maehara* and Kensuke Otsuki and Yasumi Ishibashi and Koichi Fujii and Tomohiro Takahashi},
   year={2018},
   booktitle={International Symposium on Mathematical Programming (ISMP'18), Bordeaux, France, July 1-6, 2018},
 }
 @inproceedings{sugiyama2017pu,
   title={PU-データに対するスパースSVMの同時セーフスクリーニング},
-  author={杉山太信 and 前原貴憲},
+  author={杉山 太信* and 前原 貴憲},
   year={2017},
   booktitle={第20回情報論的学習理論ワークショップ (IBIS2017), ディスカッショントラック, 東京大学本郷キャンパス, 2017年11月8日--11日, 2017},
 }
 @inproceedings{hara2017enumerating,
-  author={原聡 and 石畠正和 and 前原貴憲},
+  author={原 聡* and 石畠 正和 and 前原 貴憲},
   title={機械学習モデルの列挙},
   booktitle={第20回情報論的学習理論ワークショップ (IBIS2017), ディスカッショントラック, 東京大学本郷キャンパス, 2017年11月8日--11日, 2017},
   year={2017}
 },
 @inproceedings{osogami2017dynamic,
-  author={恐神貴行 and Rudy Raymond and Akshay Goel and 白井朋之 and 前原貴憲},
+  author={恐神 貴行* and Rudy Raymond and Akshay Goel and 白井 朋之 and 前原 貴憲},
   title={動的行列式点過程},
   year={2017},
   booktitle={第20回情報論的学習理論ワークショップ (IBIS2017), ディスカッショントラック, 東京大学, 2017年11月8日--11日, 2017},
 }
 @inproceedings{maehara2017mip,
-  author={前原貴憲 and 石橋保身 and 大槻兼資 and 藤井浩一},
+  author={前原 貴憲* and 石橋 保身 and 大槻 兼資 and 藤井 浩一},
   year={2017},
   title={機械学習を用いた MIP ソルバーのパラメータチューニング},
   booktitle={数理システムユーザーコンファレンス, 品川, 2017年11月2日},
 }
 @inproceedings{sugiyama2017simultaneous,
-  author={Taishin Sugiyama and Takanori Maehara},
+  author={Taishin Sugiyama* and Takanori Maehara},
   year={2017},
   title={Simultaneous Screening for Positive-Unlabeled Sparse Support Vector Machines},
   booktitle={International Meeting on High-Dimensional Data-Driven Science (HD3-2017), Kyoto, Japan, November 10--13, 2017},
 }
 @inproceedings{maehara2017query,
-  author={前原貴憲},
+  author={前原 貴憲*},
   year={2017},
   title={クエリ可能な確率的組合せ最適化問題},
   booktitle={第29回RAMPシンポジウム (招待講演), 筑波大学, 2017年10月12--13日},
 }
 @inproceedings{maehara2017stochastic,
-  author={Takanori Maehara},
+  author={Takanori Maehara*},
   year={2017},
   title={Stochastic Packing Integer Programming Problems with Few Queries},
   booktitle={France / Japan Machine Learning Workshop, Ulm Campus, Ecole Normale Superieure, Paris, France, September 11-12, 2017},
 }
 @inproceedings{takabe2017max,
-  author={高邉賢史 and 福島孝治 and 前原貴憲},
+  author={高邉 賢史* and 福島 孝治 and 前原 貴憲},
   year={2017},
   title={最大カバー問題に対する確率伝搬法を利用したデシメーションアルゴリズム},
   booktitle={日本物理学会 第72回年次大会, 大阪大学豊中キャンパス, 2017年3月17日--20日},
 }
 @inproceedings{hara2017enumerating,
-  author={原聡 and 前原貴憲},
+  author={原聡 and 前原 貴憲*},
   title={特徴量選択のためのLasso解列挙},
   booktitle={日本オペレーションズ・リサーチ学会 2017年春季研究発表会, 沖縄県市町村自治会館, 2017年3月15日--17日},
   year={2017},
